FIX: components z-index

--- a/src/assets/scss/components/_tooltip.scss
+++ b/src/assets/scss/components/_tooltip.scss
@@ -12,7 +12,7 @@
 
 	&.show {
 		opacity: 1;
-		z-index: 20;
+		z-index: 1055;
 	}
 
 	&.hide {
